yoshimi 2.0.1 M

2021-5-9 Will
* Added new user guide to repository in 'doc'

2021-5-8 Will
* Made small range check in CLI formant filter.
* Added CLI option to start scripts from any level.
* BugFix: Earlier Effects fix not handling no FLTK.
* BugFix: MIDI_learn FLTK not checked.

2021-5-6 Will
* Replaced ringbuffer with improved code from Rainer
  and applied his other fixes.
* Added small adjustment to MiscGui.cpp
* Removed Ringbuffer.cpp stub and adjusted cmake files.
* Adjusted copyright notices.

2021-5-5 Will
* Further bugfixes in CLI filter controls.
 For AddSynth, filter category only shown for the
 Voice 1 and the formant filter didn't recognise
 size limits.

2021-5-4 Will
* BugFix: CLI PadSynth waveform fails if voiceNumber > 0.
  Forcing voiceNumber to 0 fixes this,
  but shouldn't be needed, and is incovenient for users.

2021-4-27 Will
* Bugfix: Lost CLI startup load options.
  config test moved to wrong location.
* Re-applied history cleanups.

2021-4-18 Will
* Filter Q dial deactivated if analog and < Low2
* Corrected reporting Zyn comatibility of Yoshi files.
  We sometimes had V3.0 quoted, but are really only 2.4
* Set release version 2.0.1

2021-4-17 Will
* Added Stick Hit patch the Drums.
* Set Zyn patch compatiblity to version to 2.4.
  There never was a 2.0.
* Commented out direct key actions.
  It's not ready for release.

2021-4-14 Will
* LV2 config cleanups.
* Started per instance key only rescale to screen size.
  Ctrl + Alt + 'R'

2021-4-12 Will
* Further refinements to GUI filer

2021-4-11 Will
* Suppressed missing argp warning in LV2 Config.cpp
* Small cleanups in masterUI
* Added Forced key exit if any window has focus.
  Ctrl + Alt + 'H'

2021-4-9 Will
* Applied provisional fix for LV2 argp issue.

2021-4-9 Will
* Rationalised Config startup sequence.
  LV2 now exits as early as possible.

2021-4-8 Will
* defined our own max size used only by manual search.
  PATH_MAX not fully portable, and ill defined.