@@ -1,6 +1,6 @@
-Yoshimi User Guide Sources notes 6/5/2021
+Yoshimi User Guide notes 6/5/2021
 
-This is the complete user guide project for Yoshimi version 2.0
+This is the complete user guide for Yoshimi version 2.0
 and later.
 
 It is intended to be as platform and browser agnostic as possible, and uses
