@@ -2,6 +2,7 @@ yoshimi 2.0.1 M
 
 2021-5-9 Will
 * Added new user guide to repository in 'doc'
+* Completed Part in user guide.
 
 2021-5-8 Will
 * Made small range check in CLI formant filter.
